--- a/Day 5/index.html
+++ b/Day 5/index.html
@@ -7,6 +7,8 @@
 <script>console.log('level 1\n')</script>>
 <script src="./level1.js"></script>
 <script>console.log('\nlevel 2\n')</script>>
+<script src="./countries.js"></script>
+<script src="./web_techs.js"></script>
 <script src="./level2.js"></script>
 <script>console.log('\nlevel 3\n')</script>>
 <script src="./level3.js"></script>
