--- a/Day 7/index.html
+++ b/Day 7/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Day 7 - Wednesday, July 27th 2022</title>
+<title>Day 7 - Wednesday, August 1st 2022</title>
 </head>
 <body>
 <script>console.log('level 1\n')</script>>
