--- a/Day 8/index.html
+++ b/Day 8/index.html
@@ -6,6 +6,7 @@
 <body>
 <script>console.log('level 1\n')</script>>
 <script src="./level1.js"></script>
+<script src="./countries.js"></script>
 <script>console.log('\nlevel 2\n')</script>>
 <script src="./level2.js"></script>
 <script>console.log('\nlevel 3\n')</script>>
