--- a/Day 9/index.html
+++ b/Day 9/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Day 9 - Monday, July 29th 2022</title>
+<title>Day 9 - Monday, August 8th 2022</title>
 </head>
 <body>
 <script>console.log('level 1\n')</script>>
+<script src="./countries.js"></script>
 <script src="./level1.js"></script>
 <script>console.log('\nlevel 2\n')</script>>
 <script src="./level2.js"></script>
